[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Creatures/AAA_Baseline/Health.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Creatures/AAA_Baseline/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Creatures/AAA_Baseline/BaseCreature.gd" type="Script" id=3]

[node name="BaseCreature" type="KinematicBody"]
script = ExtResource( 3 )

[node name="PhysCollision" type="CollisionShape" parent="."]

[node name="Hitbox" type="Area" parent="."]
script = ExtResource( 2 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 1 )

[node name="MeshPivot" type="Spatial" parent="."]

[connection signal="area_entered" from="Hitbox" to="Health" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="Health" method="_on_Hitbox_body_entered"]
[connection signal="damaged" from="Health" to="." method="_on_Health_damaged"]
[connection signal="killed" from="Health" to="." method="_on_Health_killed"]
